# disaster-demand-intel

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: _aider.sh  run_dev.sh
src/: api.py  dashboard.py  geo_regions.py  llm_client.py  scoring.py  stock_map.py
src/ingest/: census_acs.py  county_geom.py  fema_nri.py  noaa_alerts.py  osm_stores.py
src/inventory/: __init__.py  replenishment.py  storage.py  synthetic.py
src/scenarios/: __init__.py  library.py  prep_plan.py
