[project]
name = "home-depot-disaster-map"
version = "0.1.0"
description = "Florida disaster demand intelligence map. Local-LLM-only."
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "streamlit>=1.40",
    "pydeck>=0.9",
    "httpx>=0.27",
    "duckdb>=1.1",
    "pandas>=2.2",
    "pyarrow>=17",
    "geopandas>=1.0",
    "shapely>=2.0",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "requests>=2.32",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
